@@ -1,14 +1,0 @@
-use strict;
-use warnings;
-
-use Test::More 'tests' => 3;
-use Test::NoWarnings;
-
-BEGIN {
-
-	# Test.
-	use_ok('Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Human');
-}
-
-# Test.
-require_ok('Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Human');
